fix bug - long text nowrap

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html {
   
 }
 body {
-  /* min-height: 100vh; */
   width: 100%;
   height: 100%;
   display: grid;
@@ -58,6 +57,7 @@ body {
   margin-bottom: 10px;
   caret-color: transparent;
   outline: none;
+  white-space: nowrap;
 }
 
 .result {
